[gd_scene load_steps=2 format=3 uid="uid://blopua6sapgq5"]

[ext_resource type="Script" path="res://multiplayer_controller.gd" id="1_rannp"]

[node name="MultiplayController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rannp")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 32.0
offset_right = 126.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 40
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 32.0
offset_right = 226.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 40
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 247.0
offset_top = 32.0
offset_right = 472.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 40
text = "Start Game"

[connection signal="button_up" from="Host" to="." method="_on_host_button_up"]
[connection signal="button_up" from="Join" to="." method="_on_join_button_up"]
[connection signal="button_up" from="StartGame" to="." method="_on_start_game_button_up"]
